# django-icons-bootstrap-icons

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
src/django_icons_bootstrap_icons/: __init__.py
tests/: settings.py  test_bsicon.py
