[project]
name = "django-icons-bootstrap-icons"
version = "0.1.0"
description = "Bootstrap Icons renderer for django-icons"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["django-icons>=24.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["django>=5.1.1", "pytest-django>=4.9.0", "pytest>=8"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
